SLT_Handler/Include/MMC/MMCWFP39.h

INT API set_home(INT, INT );
INT API get_home(INT, pINT);
INT API set_home_level(INT, INT );
INT API get_home_level(INT, pINT);
INT API set_index_required(INT, INT );
INT API get_index_required(INT, pINT);
INT API io_interrupt_enable(INT, INT);
INT API io_interrupt_on_stop(INT, INT);
INT API io_interrupt_on_e_stop(INT, INT);
INT API io_interrupt_pcirq(INT, INT);
INT API io_interrupt_pcirq_eoi(INT);
INT API set_amp_fault(INT, INT );
INT API get_amp_fault(INT, pINT);
INT API set_amp_fault_level(INT, INT );
INT API get_amp_fault_level(INT, pINT);
INT API fget_amp_fault_level(INT, pINT);
INT API set_amp_reset_level(INT, INT );
INT API get_amp_reset_level(INT, pINT);
INT API fget_amp_reset_level(INT, pINT);
INT API get_analog(INT, pINT);
INT API set_dac_output(INT, INT);
INT API get_dac_output(INT, pINT);
INT API fset_stepper(INT);
INT API fset_servo(INT);
INT API fset_feedback(INT, INT);
INT API fset_closed_loop(INT, INT );
INT API fset_unipolar(INT, INT);
INT API fset_micro_stepper(INT);
INT API fget_micro_stepper(INT);
INT API fset_amp_fault(INT, INT );
INT API fset_control(INT,INT);
INT API fset_electric_gear(INT, double);
INT API fset_step_mode(INT, INT);
INT API fset_home(INT, INT );
INT API fset_index_required(INT, INT );
INT API fio_interrupt_enable(INT, INT);
INT API fio_interrupt_on_stop(INT, INT);
INT API fio_interrupt_on_e_stop(INT, INT);
INT API fio_interrupt_pcirq(INT, INT);
INT API fset_positive_sw_limit(INT, double, INT);
INT API fset_negative_sw_limit(INT, double, INT);
INT API fset_positive_limit(INT, INT );
INT API fset_negative_limit(INT, INT );
INT API fset_in_position(INT, double);
INT API fset_error_limit(INT, double, INT);
INT API fset_stop_rate(INT, INT);
INT API fset_e_stop_rate(INT, INT);
INT API fget_stepper(INT);
INT API fget_feedback(INT, pINT);
INT API fget_closed_loop(INT, pINT);
INT API fget_unipolar(INT);
INT API fget_amp_fault(INT, pINT);
INT API fget_control(INT,pINT);
INT API fget_step_mode(INT, pINT);
INT API fget_home(INT, pINT);
INT API fget_index_required(INT, pINT);
INT API fget_positive_sw_limit(INT, pDOUBLE, pINT);
INT API fget_negative_sw_limit(INT, pDOUBLE, pINT);
INT API fget_positive_limit(INT, pINT);
INT API fget_negative_limit(INT, pINT);
INT API fget_in_position(INT, pDOUBLE);
INT API fget_error_limit(INT, pDOUBLE, pINT);
INT API fget_stop_rate(INT, pINT);
INT API fget_e_stop_rate(INT, pINT);
INT API set_interpolation(INT, pINT,pLONG,INT);
INT API frames_interpolation(INT);
INT API v_move_stop(INT);
INT API set_inposition_level(INT, INT);
INT API fset_inposition_level(INT, INT);
INT API get_inposition_level(INT, pINT);
INT API fget_inposition_level(INT, pINT);
INT API controller_idle(INT);
INT API controller_run(INT);
INT API arm_latch(INT, INT);
INT API latch_status(INT);
INT API get_latched_position(INT, pDOUBLE);
INT API latch(INT);
INT API set_timer(INT, LONG);
INT API get_timer(INT, pLONG);
INT API fget_home_level(INT, pINT);
INT API fget_positive_level(INT, pINT);
INT API fget_negative_level(INT, pINT);
INT API fset_amp_fault_level(INT, INT);
INT API fset_amp_reset_level(INT, INT);
INT API fset_amp_enable_level(INT,INT);
INT API fget_pulse_ratio(INT,pINT);
INT API fset_home_level(INT, INT);
INT API fget_accel_limit(INT, pINT);
INT API fget_vel_limit(INT, pDOUBLE);
INT API fset_vel_limit(INT, double);
INT API fset_positive_level(INT, INT);
INT API fset_negative_level(INT, INT);
INT API set_io_mode(INT, INT);
INT API fset_io_mode(INT, INT);
INT API get_io_mode(INT, pINT);
INT API fget_io_mode(INT, pINT);
INT API get_io_num(INT, pINT);
INT API set_analog_offset(INT, INT);
INT API fset_analog_offset(INT, INT);
INT API get_analog_offset(INT, pINT);
INT API fget_analog_offset(INT, pINT);
INT API set_inposition_required(INT, INT);
INT API fset_inposition_required(INT, INT);
INT API get_inposition_required(INT, pINT);
INT API fget_inposition_required(INT, pINT);
INT API set_coordinate_direction(INT, INT);
INT API fset_coordinate_direction(INT, INT);
INT API get_coordinate_direction(INT, pINT);
INT API fget_coordinate_direction(INT, pINT);
INT API set_encoder_direction(INT, INT);
INT API fset_encoder_direction(INT, INT);
INT API get_encoder_direction(INT, pINT);
INT API fget_encoder_direction(INT, pINT);